<resources>
    <string name="app_name">Street Trading</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="CancelarAcao">CancelarAcao</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Descrição">Descrição:</string>
    <string name="Código">Código:</string>
    <string name="Codigo_Produto">Código Produto</string>
    <string name="Valor_Produto">Preço:</string>
    <string name="Quantidade_Produto">Quantidade:</string>
    <string name="Descricao_produto_insira">Insira Descrição...</string>
    <string name="Quantidade_Produtos">Quantidade(s)</string>
    <string name="email_hint">Your Email...</string>
    <string name="pass_hint">Password...</string>
    <string name="login_btn_login_account">Login to Account</string>
    <string name="btn_need_account">Need a New Account</string>
    <string name="nome_produto_page">Nome Produto:</string>
    <string name="nome_produto_descricao">Nome Produto...</string>
    <string name="descricao_page">Descrição:</string>
    <string name="descricao_text">Insira Descrição...</string>
    <string name="nome_cliente_page">Nome:</string>
    <string name="cod_cliente_page">Código:</string>
    <string name="endereco_page">Endereço:</string>
    <string name="bairro_page">Bairro:</string>
    <string name="telefone_page">Telefone:</string>
    <string name="email_page">Email:</string>
    <string name="btn_cliente_cancelar">Cancelar</string>
    <string name="btn_cliente_salvar">Salvar</string>
    <string name="od_cliente_text">Insira código cliente...</string>
    <string name="nome_cliente_text">Insira nome...</string>
    <string name="endereco_cliente_text">Informe endereço...</string>
    <string name="bairro_cliente_text">Informe bairro...</string>
    <string name="telefone_cliente_text">Insira telefone...</string>
    <string name="email_cliente_text">Insira email...</string>
    <string name="Atualizar">Atualizar</string>
    <string name="txt_nome_page" />
    <string name="nome_page">Nome:</string>
</resources>
