<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFECEC"
    android:orientation="vertical"
    tools:context=".ui.AdicionarClienteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/sym_def_app_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/cod_cliente_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText11"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/od_cliente_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/nome_cliente_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText12"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/nome_cliente_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/endereco_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText13"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/endereco_cliente_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/bairro_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText14"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/bairro_cliente_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/telefone_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText15"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/telefone_cliente_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/email_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/editText16"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email_cliente_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#EFECEC"
        android:orientation="horizontal">

        <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_cliente_cancelar"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold" android:onClick="btnCancelar"/>

        <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_cliente_salvar"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold" android:onClick="btnSalvar"/>
    </LinearLayout>
</LinearLayout>