<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EFECEC"
              android:orientation="vertical"
              tools:context=".ui.AdicionarProdutoActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textView5"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:text="@string/Código"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Codigo_Produto"
                android:inputType="number" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textView10"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/descricao_page"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/descricao_text"
                android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textView12"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Valor_Produto"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Valor_Produto"
                android:inputType="number" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textView14"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Quantidade_Produto"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Quantidade_Produtos"
                android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#EFECEC"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/Cancelar"
                android:textColor="#FFF" android:onClick="btnCancelar"/>

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/Atualizar"
                android:textColor="#FFF" android:onClick="btnAtualizar"/>
    </LinearLayout>
</LinearLayout>